GEN-49: Creation Of Log Controller And Updations